--- a/package.json
+++ b/package.json
@@ -22,23 +22,13 @@
 	"devDependencies": {
 		"@woocommerce/dependency-extraction-webpack-plugin": "^1.7.0",
 		"@wordpress/scripts": "17.1.0",
-		"cross-env": "6.0.3",
-		"grunt": "^1.4.1",
-		"grunt-exec": "~3.0.0",
-		"grunt-checktextdomain": "1.0.1",
-		"grunt-contrib-copy": "^1.0.0",
-		"grunt-contrib-uglify": "4.0.1",
-		"grunt-rtlcss": "^2.0",
-		"grunt-sass": "3.0.2",
-		"grunt-wp-i18n": "1.0.3",
-		"node-sass": "^4.13.1",
-		"request": "~2.88.0"
+		"cross-env": "6.0.3"
 	},
 	"scripts": {
 		"start": "wp-scripts start",
-		"build": "wp-scripts build",
-		"i18n": "npm run i18n:check && npm run i18n:build",
-		"i18n:check": "grunt checktextdomain",
+		"build": "wp-scripts build && npm run i18n:build",
+		"build:js": "wp-scripts build",
+		"i18n": "npm run i18n:build",
 		"i18n:build": "npm run i18n:pot && ./bin/build_i18n.sh",
 		"i18n:pot": "php -d xdebug.max_nesting_level=512 $(which wp) i18n make-pot --exclude=\"node_modules/,languages/,assets/\" --headers='{\"Report-Msgid-Bugs-To\":\"https://woocommerce.com/my-account/create-a-ticket/\", \"language-team\":\"LANGUAGE <EMAIL@ADDRESS>\"}' . languages/woocommerce-checkout-integration-example.pot",
 		"i18n:json": "$(which wp) i18n make-json languages --no-purge",
